--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "karma": "^0.12.3",
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.1.5",
-    "karma-chrome-launcher": "^0.1.3"
+    "karma-chrome-launcher": "^0.1.3",
+    "grunt-cli": "^0.1.13",
+    "bower": "^1.3.1",
+    "yo": "^1.1.2",
+    "generator-travis-ci": "^0.6.6"
   },
   "engines": {
     "node": ">=0.10.0"
