--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "permitidorayar",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -27,7 +27,7 @@
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1",
-    "karma-ng-scenario": "^0.1.0",
+    "karma-ng-scenario": "0.1.0",
     "grunt-karma": "^0.8.2",
     "karma": "^0.12.3",
     "karma-ng-html2js-preprocessor": "^0.1.0",
