--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1",
-    "karma-ng-scenario": "0.1.0",
-    "grunt-karma": "^0.8.2",
-    "karma": "^0.12.3",
-    "karma-ng-html2js-preprocessor": "^0.1.0",
-    "karma-jasmine": "^0.1.5",
-    "karma-chrome-launcher": "^0.1.3",
-    "grunt-cli": "^0.1.13",
-    "bower": "^1.3.1",
-    "yo": "^1.1.2",
-    "generator-travis-ci": "^0.6.6"
+    "karma-ng-scenario": "~0.1.0",
+    "grunt-karma": "~0.8.2",
+    "karma": "~0.12.3",
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.3",
+    "grunt-cli": "~0.1.13",
+    "bower": "~1.3.1",
+    "yo": "~1.1.2",
+    "generator-travis-ci": "~0.6.6"
   },
   "engines": {
     "node": ">=0.10.0"
