--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,10 @@ env:
         # This .travis.yml file instructs travis-ci.org to build your master branch using `yeoman build`
         # and deploy the output to your project's gh-pages branch.
 
+before_install:
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
+
 before_script:
     # install dependencies
     - gem update --system
