--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-cli": "~0.1.13",
     "bower": "~1.3.1",
     "yo": "~1.1.2",
-    "generator-travis-ci": "~0.6.6"
+    "generator-travis-ci": "~0.6.6",
+    "karma-firefox-launcher": "^0.1.3"
   },
   "engines": {
     "node": ">=0.10.0"
