--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "angular-resource": "1.2.15",
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15"
+    "angular-route": "1.2.15",
+    "jquery": "~2.1.0",
+    "CornerCouch": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
