--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "jquery": "~2.1.0",
-    "CornerCouch": "*"
+    "CornerCouch": "*",
+    "angular-moment": "~0.6.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
